// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should handle no access rights 1`] = `
<Alert
  className="spacer-top"
  variant="warning"
>
  code_viewer.no_source_code_displayed_due_to_security
</Alert>
`;

exports[`should handle duplication popup 1`] = `
<Context.Consumer>
  [Function]
</Context.Consumer>
`;

exports[`should render correctly 1`] = `
<div>
  <DeferredSpinner />
</div>
`;

exports[`should render correctly 2`] = `
<div>
  <ContextProvider
    key="1-0-0"
    value={
      Object {
        "branchLike": undefined,
        "file": Object {
          "canMarkAsFavorite": true,
          "fav": false,
          "key": "project:main.js",
          "longName": "main.js",
          "measures": Object {
            "coverage": "85.2",
            "duplicationDensity": "1.0",
            "issues": "12",
            "lines": "56",
          },
          "name": "main.js",
          "path": "main.js",
          "project": "project",
          "projectName": "MyProject",
          "q": "FIL",
          "uuid": "foo-bar",
        },
      }
    }
  >
    <ComponentSourceSnippetGroupViewer
      duplicationsByLine={Object {}}
      isLastOccurenceOfPrimaryComponent={false}
      issue={
        Object {
          "actions": Array [],
          "component": "main.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "fromHotspot": false,
          "key": "1",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        }
      }
      issuesByLine={Object {}}
      lastSnippetGroup={true}
      loadDuplications={[Function]}
      locations={
        Array [
          Object {
            "component": "main.js",
            "index": 0,
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ]
      }
      onIssueChange={[MockFunction]}
      onIssuePopupToggle={[Function]}
      onIssueSelect={[MockFunction]}
      onLocationSelect={[MockFunction]}
      renderDuplicationPopup={[Function]}
      scroll={[MockFunction]}
      snippetGroup={
        Object {
          "component": Object {
            "canMarkAsFavorite": true,
            "fav": false,
            "key": "project:main.js",
            "longName": "main.js",
            "measures": Object {
              "coverage": "85.2",
              "duplicationDensity": "1.0",
              "issues": "12",
              "lines": "56",
            },
            "name": "main.js",
            "path": "main.js",
            "project": "project",
            "projectName": "MyProject",
            "q": "FIL",
            "uuid": "foo-bar",
          },
          "locations": Array [
            Object {
              "component": "main.js",
              "index": 0,
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "sources": Object {
            "16": Object {
              "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
              "coverageStatus": "covered",
              "coveredConditions": 2,
              "duplicated": false,
              "isNew": true,
              "line": 16,
              "scmAuthor": "simon.brandhof@sonarsource.com",
              "scmDate": "2018-12-11T10:48:39+0100",
              "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
            },
          },
        }
      }
    />
  </ContextProvider>
</div>
`;

exports[`should render correctly: no component found 1`] = `
<div>
  <ContextProvider
    key="unknown-0-0"
    value={
      Object {
        "branchLike": undefined,
        "file": Object {},
      }
    }
  >
    <ComponentSourceSnippetGroupViewer
      duplicationsByLine={Object {}}
      isLastOccurenceOfPrimaryComponent={false}
      issue={
        Object {
          "actions": Array [],
          "component": "test.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "fromHotspot": false,
          "key": "unknown",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        }
      }
      issuesByLine={Object {}}
      lastSnippetGroup={false}
      loadDuplications={[Function]}
      locations={Array []}
      onIssueChange={[MockFunction]}
      onIssuePopupToggle={[Function]}
      onIssueSelect={[MockFunction]}
      onLocationSelect={[MockFunction]}
      renderDuplicationPopup={[Function]}
      scroll={[MockFunction]}
      snippetGroup={
        Object {
          "component": Object {},
          "locations": Array [],
          "sources": Array [],
        }
      }
    />
  </ContextProvider>
  <ContextProvider
    key="unknown-0-1"
    value={
      Object {
        "branchLike": undefined,
        "file": Object {
          "canMarkAsFavorite": true,
          "fav": false,
          "key": "project:main.js",
          "longName": "main.js",
          "measures": Object {
            "coverage": "85.2",
            "duplicationDensity": "1.0",
            "issues": "12",
            "lines": "56",
          },
          "name": "main.js",
          "path": "main.js",
          "project": "project",
          "projectName": "MyProject",
          "q": "FIL",
          "uuid": "foo-bar",
        },
      }
    }
  >
    <ComponentSourceSnippetGroupViewer
      duplicationsByLine={Object {}}
      isLastOccurenceOfPrimaryComponent={false}
      issue={
        Object {
          "actions": Array [],
          "component": "test.js",
          "componentLongName": "main.js",
          "componentQualifier": "FIL",
          "componentUuid": "foo1234",
          "creationDate": "2017-03-01T09:36:01+0100",
          "flows": Array [
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
          ],
          "fromHotspot": false,
          "key": "unknown",
          "line": 25,
          "message": "Reduce the number of conditional operators (4) used in the expression",
          "project": "myproject",
          "projectKey": "foo",
          "projectName": "Foo",
          "rule": "javascript:S1067",
          "ruleName": "foo",
          "secondaryLocations": Array [
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
            Object {
              "component": "main.js",
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "severity": "MAJOR",
          "status": "OPEN",
          "textRange": Object {
            "endLine": 26,
            "endOffset": 15,
            "startLine": 25,
            "startOffset": 0,
          },
          "transitions": Array [],
          "type": "BUG",
        }
      }
      issuesByLine={Object {}}
      lastSnippetGroup={true}
      loadDuplications={[Function]}
      locations={
        Array [
          Object {
            "component": "main.js",
            "index": 0,
            "textRange": Object {
              "endLine": 2,
              "endOffset": 2,
              "startLine": 1,
              "startOffset": 1,
            },
          },
        ]
      }
      onIssueChange={[MockFunction]}
      onIssuePopupToggle={[Function]}
      onIssueSelect={[MockFunction]}
      onLocationSelect={[MockFunction]}
      renderDuplicationPopup={[Function]}
      scroll={[MockFunction]}
      snippetGroup={
        Object {
          "component": Object {
            "canMarkAsFavorite": true,
            "fav": false,
            "key": "project:main.js",
            "longName": "main.js",
            "measures": Object {
              "coverage": "85.2",
              "duplicationDensity": "1.0",
              "issues": "12",
              "lines": "56",
            },
            "name": "main.js",
            "path": "main.js",
            "project": "project",
            "projectName": "MyProject",
            "q": "FIL",
            "uuid": "foo-bar",
          },
          "locations": Array [
            Object {
              "component": "main.js",
              "index": 0,
              "textRange": Object {
                "endLine": 2,
                "endOffset": 2,
                "startLine": 1,
                "startOffset": 1,
              },
            },
          ],
          "sources": Object {
            "16": Object {
              "code": "<span class=\\"k\\">import</span> java.util.<span class=\\"sym-9 sym\\">ArrayList</span>;",
              "coverageStatus": "covered",
              "coveredConditions": 2,
              "duplicated": false,
              "isNew": true,
              "line": 16,
              "scmAuthor": "simon.brandhof@sonarsource.com",
              "scmDate": "2018-12-11T10:48:39+0100",
              "scmRevision": "80f564becc0c0a1c9abaa006eca83a4fd278c3f0",
            },
          },
        }
      }
    />
  </ContextProvider>
</div>
`;
